# notifications_sprint_1

./: .gitignore  ci_cd_requirements.txt  ruff.toml
.github/workflows/: python.yml
admin/app/: .example.env  Dockerfile
admin/app/clients/auth/: client.py
admin/app/clients/base/: client.py  exceptions.py
admin/app/config/: settings.py  urls.py
admin/app/config/components/: apps.py  auth_service.py  base.py  constance.py  csrf.py  database.py  debug_toolbar.py  drf.py  drf_spectacular.py  middlewares.py  redis.py
admin/app/movies/: admin.py  authentication.py  model_mixins.py  models.py  serializers.py  urls.py  views.py
admin/app/movies/migrations/: 0001_initial.py  0002_remove_user_password.py
admin/app/requirements/: base.txt  local.txt
admin/app/scripts/: entrypoint.sh
auth/: docker-compose.yml  filebeat.yml
auth/src/: Dockerfile
auth/src/app/: main.py
consumer/: .example.env  Dockerfile  Makefile  docker-compose.yml  filebeat.yml  pyproject.toml
consumer/alembic/: env.py
consumer/src/: main.py
consumer/src/logger/: __init__.py  logger.py
consumer/src/models/: __init__.py  base.py  processed_notification.py
consumer/src/repository/: base.py  processed_notification.py
consumer/src/schemas/: email.py  notification.py  user.py
consumer/src/services/builder/: base.py  html.py
consumer/src/services/consumer/: base.py  kafka.py  utils.py
consumer/src/services/sender/: base.py  smtp.py
consumer/src/settings/: kafka.py  logger.py  postgresql.py  smtp.py
cron/: docker-compose.yml
cron/app/: .env.example  main.py
cron/src/: .env.example  Dockerfile  crontab
cron/src/app/: main.py
cron/src/app/db/: postgres.py
cron/src/app/models/: events.py
cron/src/app/settings/: base.py  logging.py  postgres.py  producer_api.py
cron/src/requirements/: main.txt
infrastructure/: .env  .gitignore  Makefile  docker-compose.yml  local-docker-compose.yml
infrastructure/logstash/pipelines/: logstash.conf
infrastructure/nginx/configs/: site.conf
infrastructure/postgresql/initdb/: initdb.sql
producer/: Dockerfile  docker-compose.yml  requirements.txt
producer/src/: .example.env
producer/src/alembic/: env.py
producer/src/alembic/versions/: 4575fb59e8c7_initial.py  c46ec9de2c79_initial.py
producer/src/app/: main.py
producer/src/app/api/v1/: router.py
producer/src/app/clients/auth/: client.py
producer/src/app/commands/: postgres_data.py
producer/src/app/models/: __init__.py  constance.py  event_types.py  models.py
producer/src/app/repository/: channel.py  content.py  notification.py  notification_channel.py  notification_status.py  notification_type.py  template.py
producer/src/app/settings/: api.py  jwt.py  kafka.py  postgresql.py
(+5 files in other folders)
