[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Nikolay Shvets <kolya.shvets20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosmtplib = "^3.0.2"
pydantic-settings = "^2.6.1"
pydantic = "^2.9.2"
aiokafka = "^0.12.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
